fixed alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,7 +23,7 @@ img { display: block; }
 #header #navwrapper { position: relative; opacity: 0; width: 1136px; height: 106px; background: url("../img/logo.png") top left no-repeat; background-position: center; margin: 0 auto; }
 #header #navwrapper .nav { opacity: 0; margin: 0 auto; width: 883px; padding-top: 35px; padding-left: 254px;  }
 #header #navwrapper .nav a { float: left; font: normal 14px 'TGBC18'; opacity: .7; }
-#header #navwrapper .nav .projects { margin-right: 83px; }
+#header #navwrapper .nav .projects { margin-right: 63px; }
 #header #navwrapper .nav .openabout { margin-right: 264px; }
 #header #navwrapper .nav .opencontact { margin-right: 56px; }
 #header #subnavswrapper { width: 100%; height: 104px; background: #000000; display: none;  }
